openshif-yaml/deployment-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: quay.io/fedora/postgresql-16:latest 
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/pgsql/data  
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-storge
