openshif-yaml/deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:                  
  selector:
    matchLabels:
      app: redis
  template:            
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        command: ["redis-server"]
        args: ["--requirepass", "$(REDIS_PASSWORD)"]
        ports:
          - containerPort: 6379
        volumeMounts:
          - name: redis-data-storage
            mountPath: /data
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
        - name: redis-data-storage
          persistentVolumeClaim:
            claimName: redis-storage
